# Launcher

./: .gitignore  Cargo.toml  README.md
assets/: com.example.launcher.desktop
src/: app_index.rs  executor.rs  main.rs  search.rs  style.css  ui.rs
