[package]
name = "launcher"
version = "0.1.0"
edition = "2021"
description = "Minimal application launcher for GNOME"
license = "MIT"

[[bin]]
name = "launcher"
path = "src/main.rs"

[dependencies]
gtk = { version = "0.11", package = "gtk4" }
adw = { version = "0.9", package = "libadwaita" }
# Use the same glib/gio version that gtk4 0.11 / libadwaita 0.9 pull in
glib = "0.22"
gio = "0.22"
fuzzy-matcher = "0.3"
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/launcher", dest = "/usr/bin/launcher", mode = "755" }
]
